# TPA-Frontend

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  helpful_commands.sh  pyproject.toml
app/: requirements.txt  start.py
configs/: config.yaml  language_content.yaml
src/tpa_frontend/: main.py
src/tpa_frontend/charts/: create.py
src/tpa_frontend/config_handler/: load_configs.py
src/tpa_frontend/data_loader/: load.py
src/tpa_frontend/streamlit_elements/: mainframe.py  sidebar.py
test/: conftest.py  test_config.yaml  test_config_handler.py  test_data_loader.py  test_language_content.yaml  test_streamlit_elements.py
